arreglar cargar auto y quitar persistencia